# todo_app

./: README.md  README.rst  docker-compose-dev.yml  docker-compose-vscode-devcontainer.yml  pyproject.toml
.devcontainer/: devcontainer.json
.envs/todo_app_db/: dev.env
.envs/todo_app_web/: dev.env
compose/todo_app_web/: Dockerfile  entrypoint.sh
tests/: test_todo_app.py
todo_app/: config.py  db.py  main.py  models.py  responses.py  schemas.py
todo_app/routers/: auth.py  todo.py
