[tool.poetry]
name = "todo-app"
version = "1.0.0"
description = ""
authors = ["Havardox <harald.varner@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
psycopg = "^3.1.12"
sqlalchemy = "^2.0.22"
pydantic-settings = "^2.0.3"
python-jose = "^3.3.0"
passlib  = "^1.7.4"
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
